StorageManager add gws fromService